# libcloudproviders

./: .gitlab-ci.yml  CHANGELOG  README.md  meson.build
docs/: cloudproviders-dbus.md  integration-client.md  integration-server.md  meson.build
docs/reference/: libcloudproviders-docs.xml  meson.build  version.xml.in
src/: cloudproviders.h  cloudprovidersaccount.c  cloudprovidersaccount.h  cloudprovidersaccountexporter.c  cloudprovidersaccountexporter.h  cloudproviderscollector.c  cloudproviderscollector.h  cloudprovidersexports.h  cloudprovidersprovider.c  cloudprovidersprovider.h  cloudprovidersproviderexporter.c  cloudprovidersproviderexporter.h  meson.build
test/: meson.build  testcloudprovidersclient.c  testcloudprovidersserver.c
